<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="c4q.com.final_redux.BreedsActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"/>
    
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/terry"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terrier"
            android:textSize="30sp"
            android:layout_weight= "4"/>

        <ImageView
            android:id="@+id/terry_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "2" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spaniel"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spaniel"
            android:textSize="30sp"
            android:layout_weight= "4"/>

        <ImageView
            android:id="@+id/spaniel_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "2" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/retriever"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retriever"
            android:textSize="30sp"
            android:layout_weight= "4"/>

        <ImageView
            android:id="@+id/retriever_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "2" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/poodle"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poodle"
            android:textSize="30sp"
            android:layout_weight= "4"/>

        <ImageView
            android:id="@+id/poodle_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "2" />

    </android.support.v7.widget.CardView>

</LinearLayout>
